<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="@drawable/plain">

        <!--  Header  Starts-->
        <LinearLayout android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header"
            android:paddingTop="5dip"
            android:paddingBottom="5dip">
            <!-- Logo Start-->
            <ImageView
                android:src="@drawable/login"
                android:contentDescription="@string/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dip"
                android:layout_marginRight="1dip"/>
            <!-- Logo Ends -->
        </LinearLayout>
        <!--  Header Ends -->
        <!-- Footer Start -->

        <!-- Footer Ends -->

        <!-- Registration Form -->
        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_below="@id/header"
            android:id="@+id/linearLayout">
            <!-- Email Label -->

            <EditText android:id="@+id/login_uname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:inputType="text"
                android:hint="@string/uname"
                android:layout_marginBottom="20dip"/>
            <!--  password Label -->

            <EditText android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/lpass"
                android:layout_marginBottom="20dip"/>



            <!-- Register Button -->
            <Button android:id="@+id/start_btnachiev"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnlog"
                android:layout_above="@+id/linearLayout2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="39dp"
                android:background="@layout/button"
                android:drawableLeft="@drawable/login_icon"
                />
            <!-- Link to  Screen -->


        </LinearLayout>


        <!-- Registration Form Ends -->
    </RelativeLayout>
</ScrollView>